Cambio de lista de video por lista de canciones con videos

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,16 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.skysiteofi2.elorganista">
+
     <uses-permission android:name="android.permission.INTERNET" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-
-        <activity android:name=".MainActivity"
-            android:screenOrientation="landscape"  >
+        <activity
+            android:name=".MainActivity"
+            android:screenOrientation="landscape">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -21,29 +23,32 @@
             android:name=".Nivel"
             android:label="@string/title_activity_nivel"
             android:parentActivityName=".MainActivity"
-            android:theme="@style/AppTheme"
-            android:screenOrientation="landscape"  >
+            android:screenOrientation="landscape"
+            android:theme="@style/AppTheme">
 
             <!-- Parent activity meta-data to support 4.0 and lower -->
             <meta-data
                 android:name=".MainActivity"
                 android:value=".MainActivity" />
         </activity>
-        <activity android:name=".Videos"
+        <activity
+            android:name=".Videos"
             android:parentActivityName=".Nivel"
-            android:screenOrientation="landscape"  >
+            android:screenOrientation="landscape">
             <meta-data
                 android:name=".Nivel"
                 android:value=".Nivel" />
         </activity>
-        <activity android:name=".ReproductorVideo"
-            android:parentActivityName=".Nivel"
+        <activity
+            android:name=".ReproductorVideo"
             android:configChanges="orientation|screenSize"
-            android:screenOrientation="landscape"  >
+            android:parentActivityName=".Nivel"
+            android:screenOrientation="landscape">
             <meta-data
                 android:name=".Videos"
                 android:value=".Videos" />
         </activity>
+        <activity android:name=".Videos2"></activity>
     </application>
 
 </manifest>
